--- a/Sass/components/_butons.scss
+++ b/Sass/components/_butons.scss
@@ -40,7 +40,9 @@
     opacity: 0.8;
     filter: brightness(2);
     -webkit-filter:brightness(2);
-  }
+    animation: opacity 1s;
+    -webkit-animation: opacity 1s;
+}
 
 .searchbutton a {
     color: #fff;
