--- a/Sass/main.css
+++ b/Sass/main.css
@@ -807,6 +807,8 @@ body {
   opacity: 0.8;
   filter: brightness(2);
   -webkit-filter: brightness(2);
+  animation: opacity 1s;
+  -webkit-animation: opacity 1s;
 }
 
 .searchbutton a {
