--- a/Sass/components/_check.scss
+++ b/Sass/components/_check.scss
@@ -3,24 +3,23 @@
     background-color:rgba(153, 226, 208, 1);
     position: relative;
     height:40px;
-    padding: 15px 12px;    
+    padding: 15px 12px;
     justify-content:center;
     align-items: center;
     display: flex;
     margin: 0;
     transition: all 0.5s;
-    -webkit-transition: all 0.5s;
-    -moz-transition: all 0.5s;
-    -ms-transition: all 0.5s;
-    -o-transition: all 0.5s;
+    -webkit-transition:all 5s;
+    -moz-transition:all 5s;
+    -ms-transition:all 5s;
+    -o-transition:all 5s;
     overflow: hidden;
-    margin-left: 10px;    
-  }
+    margin-left: 10px;
+}
   
 .validation {
     width:0px;
     display:flex;
-    position: relative;
     justify-content:space-around;
     align-items:flex-start;
     position:relative;
@@ -28,15 +27,19 @@
     -webkit-transform:translateX(1px);
     -moz-transform:translateX(1px);
     -ms-transform:translateX(1px);
-    -o-transform:translateX(1px);   
-  }
+    -o-transform:translateX(1px);
+}
   
 .validation:hover {
     transform:translateX(0);
     transition-duration: 5s;
+    transition-delay: 0s;
     -webkit-transform:translateX(0px);
     -moz-transform:translateX(0px);
     -ms-transform:translateX(0px);
     -o-transform:translateX(0px);
-  }
+   
+    
+ 
+}
   
