Ajustement icones footer

--- a/Sass/layouts/_footer.scss
+++ b/Sass/layouts/_footer.scss
@@ -60,6 +60,11 @@ footer {
 .fa-utensils, .fa-handshake-simple, .logofooter-txt {
     color:#FFFFFF; 
     height: 13px;
+    margin-right:5px;
+}
+
+.logofooter-txt {
+    padding-left: 5px;
 }
 
 .rotate {
