--- a/Sass/main.css
+++ b/Sass/main.css
@@ -241,6 +241,11 @@ footer {
 .fa-utensils, .fa-handshake-simple, .logofooter-txt {
   color: #FFFFFF;
   height: 13px;
+  margin-right: 5px;
+}
+
+.logofooter-txt {
+  padding-left: 5px;
 }
 
 .rotate {
